[initial] initial info ui 완, cleanser 변수명 전체 변경

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         <activity android:name=".ShowerActivity"/>
         <activity android:name=".ShavingActivity"/>
         <activity android:name=".ShampooActivity"/>
-        <activity android:name=".ClensingActivity"/>
+        <activity android:name=".CleansingActivity"/>
         <activity android:name=".InitialInfoActivity"/>
 
     </application>
