--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -15,18 +16,19 @@
         android:theme="@style/Theme.ShowerTimer"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity">
-        </activity>
-        <activity android:name=".ToothbrushActivity"/>
-        <activity android:name=".ShowerActivity"/>
-        <activity android:name=".ShavingActivity"/>
-        <activity android:name=".ShampooActivity"/>
-        <activity android:name=".CleansingActivity"/>
-        <activity android:name=".InitialInfoActivity"/>
-        <activity android:name=".SetupActivity"/>
-        <activity android:name=".Widget"/>
-        <activity android:name=".ConfirmActivity"/>
-        <activity android:name=".StartActivity"/>
+            android:name=".EndActivity"
+            android:exported="false" />
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".ToothbrushActivity" />
+        <activity android:name=".ShowerActivity" />
+        <activity android:name=".ShavingActivity" />
+        <activity android:name=".ShampooActivity" />
+        <activity android:name=".CleansingActivity" />
+        <activity android:name=".InitialInfoActivity" />
+        <activity android:name=".SetupActivity" />
+        <activity android:name=".Widget" />
+        <activity android:name=".ConfirmActivity" />
+        <activity android:name=".StartActivity" />
         <activity
             android:name=".SplashActivity"
             android:exported="true">
