--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,8 @@
             android:theme="@style/AppTheme"/>
         <activity android:name=".StartActivity"
             android:theme="@style/AppTheme"/>
+        <activity android:name=".EndActivity"
+            android:theme="@style/AppTheme"/>
         <activity
             android:name=".SplashActivity"
             android:theme="@style/AppTheme"
